--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,22 +11,20 @@
     "axios": "^1.8.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.5",
+    "js-cookie": "^3.0.1",
+    "psychat0226": "file:..",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
-    "vuex": "^4.0.2",
-    "js-cookie": "^3.0.1"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "@vue/compiler-sfc": "^3.2.13"
+    "sass-loader": "^12.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -37,9 +35,7 @@
       "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
+    "parserOptions": {},
     "rules": {}
   },
   "browserslist": [
